welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: value =< is not a member of Int
  if ((10=<a && a>=20) || (10=<b && b>=20)){return true}
         ^in1020:2: error: value =< is not a member of Int
  if ((10=<a && a>=20) || (10=<b && b>=20)){return true}
                             ^